--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h1 {
 .card h2 {
     font-size: 1.5em;
     margin: 15px 0;
-    color: #333;
+    color: #f3eeee;
 }
 
 .result-button {
@@ -73,4 +73,8 @@ h1 {
 .eredmeny span {
     font-weight: bold;
     color: #007bff;
+}
+
+h2 {
+    color: #ffffff;
 }
